[package]
name = "strl_chrm_password_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.1.3"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.68"
ureq = { version = "*", features = ["json", "charset"]}
platform-dirs = "0.3.0"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]